add title Features

--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@
       </section>
       <!--Features-->
       <section>
+        <h2>Features</h2>
         <ul>
           <li>
             <p>Strategy</p>
