--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
   <body>
     <!--Header-->
     <header>
-      <a href="">WEBSTUDIO</a>
       <!--site nav-->
       <nav>
+         <a href="./index.html">WEBSTUDIO</a>
         <ul>
           <li>
             <a href="">Studio</a>
@@ -25,19 +25,15 @@
         </ul>
       </nav>
       <!--Contacts-->
-      <ul>
-        <li>
+        <address>
           <a href="mailto:info@devstudio.com">info@devstudio.com</a>
-        </li>
-        <li>
           <a href="tel:+11(000)1111111">+11 (000) 111-11-11</a>
-        </li>
-      </ul>
+        </address> 
     </header>
     <main>
       <!--Hero-->
       <section>
-        <h1>Effective Solutionsfor Your Business</h1>
+        <h1>Effective Solutions for Your Business</h1>
         <button type="button" >Order Service</button>
       </section>
       <!--Features-->
@@ -45,28 +41,28 @@
         <h2>Features</h2>
         <ul>
           <li>
-            <p>Strategy</p>
+            <h3>Strategy</h3>
             <p>
               Our goal is to identify the business problem to walk away with the
               perfect and creative solution.
             </p>
           </li>
           <li>
-            <p>Punctuality</p>
+            <h3>Punctuality</h3>
             <p>
               Bring the key message to the brand's audience for the best price
               within the shortest possible time.
             </p>
           </li>
           <li>
-            <p>Diligence</p>
+            <h3>Diligence</h3>
             <p>
               Research and confirm brands that present the strongest digital
               growth opportunities and minimize risk.
             </p>
           </li>
           <li>
-            <p>Technologies</p>
+            <h3>Technologies</h3>
             <p>
               Design practice focused on digital experiences. We bring forth a
               deep passion for problem-solving.
@@ -95,22 +91,22 @@
         <ul>
           <li>
             <img src="./images/img.jpg" alt="Product Designer" width="264">
-            <p>Mark Guerrero</p>
+            <h3>Mark Guerrero</h3>
             <p>Product Designer</p>
           </li>
           <li>
             <img src="./images/img4.jpg" alt="Frontend Developer" width="264">
-            <p>Tom Ford</p>
+            <h3>Tom Ford</h3>
             <p>Frontend Developer</p>
           </li>
           <li>
             <img src="./images/img5.jpg" alt="Marketing" width="264">
-            <p>Camila Garcia</p>
+            <h3>Camila Garcia</h3>
             <p>Marketing</p>
           </li>
           <li>
             <img src="./images/img6.jpg" alt="UI Designer" width="264">
-            <p>Daniel Wilson</p>
+            <h3>Daniel Wilson</h3>
             <p>UI Designer</p>
           </li>
         </ul>
@@ -118,7 +114,7 @@
     </main>
     <!--Footer-->
     <footer>
-      <a href="">WEBSTUDIO</a>
+      <a href="./index.html">WEBSTUDIO</a>
       <p>
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
