--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <header>
       <!--site nav-->
       <nav>
-         <a href="./index.html">WEBSTUDIO</a>
+         <a href="./index.html">WebStudio</a>
         <ul>
           <li>
             <a href="">Studio</a>
@@ -26,8 +26,14 @@
       </nav>
       <!--Contacts-->
         <address>
-          <a href="mailto:info@devstudio.com">info@devstudio.com</a>
-          <a href="tel:+11(000)1111111">+11 (000) 111-11-11</a>
+          <ul>
+            <li>
+              <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+            </li>
+            <li>
+              <a href="tel:+110001111111">+11 (000) 111-11-11</a>
+            </li>
+          </ul>  
         </address> 
     </header>
     <main>
@@ -114,7 +120,7 @@
     </main>
     <!--Footer-->
     <footer>
-      <a href="./index.html">WEBSTUDIO</a>
+      <a href="./index.html">WebStudio</a>
       <p>
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
